RESOLVED FIXED78029
[BlackBerry] NetworkJob should stop redirecting when the request is cleared by client
https://bugs.webkit.org/show_bug.cgi?id=78029
Summary [BlackBerry] NetworkJob should stop redirecting when the request is cleared b...
Yong Li
Reported 2012-02-07 13:28:21 PST
Client can clear the new request and expect platform network layer to stop proceeding. We should check this after calling client->willSendRequest()
Attachments
the patch (1.72 KB, patch)
2012-02-07 14:40 PST, Yong Li
no flags
Yong Li
Comment 1 2012-02-07 14:40:09 PST
Created attachment 125928 [details] the patch
Rob Buis
Comment 2 2012-02-07 14:45:15 PST
Comment on attachment 125928 [details] the patch Looks good.
WebKit Review Bot
Comment 3 2012-02-07 18:05:48 PST
Comment on attachment 125928 [details] the patch Clearing flags on attachment: 125928 Committed r107021: <http://trac.webkit.org/changeset/107021>
WebKit Review Bot
Comment 4 2012-02-07 18:05:52 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.