[BlackBerry] NetworkJob should stop redirecting when the request is cleared by client https://bugs.webkit.org/show_bug.cgi?id=78029

Patch by Yong Li <yoli@rim.com> on 2012-02-07
Reviewed by Rob Buis.

When a redirect is rejected by security origin check, the ResourceRequest
will be cleared (see DocumentThreadableLoader::redirectReceived()). In this
case, we should stop handling the request.

No new tests because existing tests (like http:/tests/xmlhttprequest/redirect-cross
-origin-tripmine.html) can cover this.

* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::startNewJobWithRequest):

Canonical link: https://commits.webkit.org/94933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107021 268f45cc-cd09-0410-ab3c-d52691b4dbfc